--- a/frontend/components/NoteDetail.css
+++ b/frontend/components/NoteDetail.css
@@ -3,7 +3,7 @@
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-
+ 
   textarea {
     width: 100%;
     height: 100%;
@@ -14,4 +14,9 @@
     font-size: 1.2rem;
     outline: none;
   }
+ 
+  textarea.white { background: #ffffff; }
+  textarea.red   { background: #f2c6c6; }
+  textarea.blue  { background: #d6e2f5; }
+  textarea.green { background: #dbead4; }
 }
