✨ サンプルノート追加 / UI の状態管理

--- a/frontend/components/NoteItem/style.css
+++ b/frontend/components/NoteItem/style.css
@@ -19,3 +19,15 @@
     line-height: 1;
   }
 }
+
+/* メモモードのときのスタイル */
+:host:has(.content[data-note-type="MEMO"]) {
+  /* 分かりやすいようにとりあえず赤枠にしています */
+  border-color: red;
+}
+
+/* TODOモードのときのスタイル */
+:host:has(.content[data-note-type="TODO"]) {
+  /* 分かりやすいようにとりあえず青枠にしています */
+  border-color: blue;
+}
