--- a/frontend/components/NoteDetail/NoteDetailInput/style.css
+++ b/frontend/components/NoteDetail/NoteDetailInput/style.css
@@ -3,15 +3,33 @@
   height: 100%;
   width: 100%;
   box-sizing: border-box;
+  border: 2px solid;
 
-  textarea {
-    width: 100%;
+  .content {
     height: 100%;
-    border: none;
-    resize: none;
-    padding: 20px;
-    box-sizing: border-box;
-    font-size: 1.2rem;
-    outline: none;
+    width: 100%;
+
+    textarea {
+      width: 100%;
+      height: 100%;
+      border: none;
+      resize: none;
+      padding: 20px;
+      box-sizing: border-box;
+      font-size: 1.2rem;
+      outline: none;
+    }
   }
+}
+
+/* メモのときのスタイル */
+:host:has(.content[data-note-type="MEMO"]) {
+  /* 分かりやすいようにとりあえず赤枠にしています */
+  border-color: red;
+}
+
+/* TODO のときのスタイル */
+:host:has(.content[data-note-type="TODO"]) {
+  /* 分かりやすいようにとりあえず青枠にしています */
+  border-color: blue;
 }
