--- a/frontend/components/BangNoteApp/style.css
+++ b/frontend/components/BangNoteApp/style.css
@@ -1,34 +1,24 @@
 :host {
   display: grid;
-  height: 100vh;
-  width: 100vw;
-  grid-template-columns: 40% 1fr;
-  grid-template-rows: 60px 1fr;
-  gap: 16px;
-  padding: 16px;
-  box-sizing: border-box;
+  grid-template-rows: auto 1fr;
+  height: 100%;
+  width: 100%;
+  padding: 20px !important;
   background-color: #f0f0f0;
-  font-family: sans-serif;
+  gap: 20px;
 
   type-switch {
-    grid-column: 1 / -1;
-    grid-row: 1;
-    display: flex;
-    justify-content: center;
+    width: fit-content;
+    margin-inline: auto;
     align-items: center;
   }
 
-  note-list {
-    grid-column: 1;
-    grid-row: 2;
-    background: white;
-    border: 2px solid #000;
-    padding: 10px;
-    overflow-y: auto;
-  }
+  > div {
+    display: grid;
+    width: 100%;
+    flex: 1;
 
-  note-detail {
-    grid-column: 2;
-    grid-row: 2;
+    grid-template-columns: 2fr 3fr;
+    gap: 20px;
   }
 }
