--- a/frontend/components/NoteDetail/NoteDetailInput/style.css
+++ b/frontend/components/NoteDetail/NoteDetailInput/style.css
@@ -1,7 +1,6 @@
 :host {
   display: block;
   height: 100%;
-  width: 100%;
   box-sizing: border-box;
   border: 2px solid;
   position: relative;
@@ -26,6 +25,7 @@
   MEMO
 ========================= */
 textarea {
+  font-family: monospace;
   width: 100%;
   height: 100%;
   border: none;
@@ -68,6 +68,7 @@ textarea {
 }
 
 .todo-row input[type="text"] {
+  font-family: monospace;
   flex: 1;
   border: none;
   font-size: 1.1rem;
